# CRISPR_DNABERT

./: README.md  config.yaml  main.py  main.sh  result.py
data_processing/Schmid-Burgk_2020/: config.py  count_dsb.py  implement.md  mapping.sh  preprocess_before_mapping.sh  processing_memo.txt
script/: config.py  data_loader.py  dnabert_analysis.py  dnabert_module.py  dnabert_pair_ft.py  dnabert_pair_token_ft.py  epigenetic_module.py  result_module.py  utilities_module.py  visualize_module.py
script/luo_et_al/: crispr_bert_module.py
script/sari_et_al/: crispr_bert_2025_module.py
script/toufikuzzaman_et_al/: crispr_dipoff_module.py
script/yaish_et_al/: gru_embed_module.py
script/yang_et_al/: crispr_hw_module.py
src/: run_eda.py  run_ensemble.py  run_epigenetic_process.py  run_error_analysis.py  run_model.py  run_model_interpret.py  run_preprocess.py  run_result.py  run_result_analysis.py
src/cpp_module/: CMakeLists.txt  bigwig_reader.cpp
src/eda/: cpg_analysis.py  eda_bash.txt  eda_module.py  ots_dist_analysis.py
src/models/: crispr_bert_2024.py  crispr_bert_2025.py  crispr_dipoff_2025.py  crispr_hw_2023.py  data_loader.py  dnabert_module.py  gru_embed_2024.py  model_scratch.py  model_transfer.py  model_transfer_epi.py  pair_finetuning_dnabert.py  result.py
src/utils/: check_set.py  epigenetic_module.py  error_analysis.py  fasta_handlers.py  file_handlers.py  interpretation_module.py  result_module.py  sequence_module.py
src/visualization/: plot_bert_fig.py  plot_dsb_count.py  plot_epigenetic_fig.py  plot_linecurve.py  plot_mismatch_fig.py  (+3 more)
